tests/ui/traits/copy-requires-all-fields-copy.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/copy-requires-all-fields-copy.rs:9:15
   |
LL |     but_i_cant: CantCopyThis,
   |     ------------------------ this field does not implement `Copy`
...
LL | impl Copy for IWantToCopyThis {}
   |               ^^^^^^^^^^^^^^^

error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/copy-requires-all-fields-copy.rs:21:15
   |
LL |     ButICant(CantCopyThisEither),
   |              ------------------ this field does not implement `Copy`
...
LL | impl Copy for IWantToCopyThisToo {}
   |               ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0204`.
